gduwindow: Attach popup menu to the window

For Wayland surfaces to be placed, they need to be subsurfaces, thus
requiring a parent surface.

Attach the generic menu to the corresponding toplevel widget so that the
popup menu can be placed where expected.

https://bugzilla.gnome.org/show_bug.cgi?id=765448